--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb+srv
-      MONGODB_CLUSTER_ADDRESS: cluster0.ntrwp.mongodb.net
-      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
+      MONGODB_CLUSTER_ADDRESS: cluster0.r6m1l.mongodb.net
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }} # sharathkumar0498
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }} # tDqqAS3xRKIYs2su
       PORT: 8080
     steps:
       - name: Get Code
